gen/Tokens/TokensParser.java
// Generated from D:/Compiler/src/main/java/Tokens/Tokens.g4 by ANTLR 4.13.2
package Tokens;

package ru.Compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TokensParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, INT=5, DOUBLE=6, STRING=7, BOOLEAN=8, 
		BLANK=9, NAMESPACE=10, INTERFACE=11, CLASS=12, METHOD=13, IMPLMT=14, USES=15, 
		BEGIN=16, END_M=17, END_P=18, FOR=19, WHILE=20, BREAK=21, IF=22, ELSE=23, 
		ELSE_IF=24, RETURN=25, PLUS=26, MINUS=27, MULT=28, DIV=29, R_DIV=30, EQUALLY=31, 
		COMMENT=32, POINT=33, PC=34, Q_MARK=35, MANY=36, LESS=37, EQUALLY_BOOL=38, 
		NOT_EQUALLY=39, L_EQUALLY=40, M_EQUALLY=41, INCREM=42, DECREM=43, AND=44, 
		OR=45, TRUE=46, FALSE=47, LSHIFT=48, RSHIFT=49, INT_M=50, DOUBLE_M=51, 
		STRING_M=52, BOOLEAN_M=53, PUBLIC=54, PRIVATE=55, NUMBER_INT=56, DOUBLE_NUMBER=57, 
		STRING_LITERAL=58, MAIN=59, PRINT=60, ID_UP=61, ID_LOW=62;
	public static final int
		RULE_program = 0, RULE_namespaceDeclaration = 1, RULE_interfaceDeclaration = 2, 
		RULE_classDeclaration = 3, RULE_classBody = 4, RULE_publicSection = 5, 
		RULE_privateSection = 6, RULE_classMember = 7, RULE_methodDeclaration = 8, 
		RULE_parameterList = 9, RULE_parameter = 10, RULE_nestedClassDeclaration = 11, 
		RULE_type = 12, RULE_implementationDeclaration = 13, RULE_classMethod = 14, 
		RULE_methodBody = 15, RULE_returnMethodBody = 16, RULE_returnStatement = 17, 
		RULE_statementList = 18, RULE_statement = 19, RULE_methodCall = 20, RULE_methodCallReturn = 21, 
		RULE_assignment = 22, RULE_argumentList = 23, RULE_variableDeclaration = 24, 
		RULE_booleanDeclaration = 25, RULE_expression = 26, RULE_shiftExpression = 27, 
		RULE_term = 28, RULE_factor = 29, RULE_print = 30, RULE_printExpression = 31, 
		RULE_printAddExpr = 32, RULE_printAtom = 33, RULE_bool = 34, RULE_boolExpression = 35, 
		RULE_boolTerm = 36, RULE_boolFactor = 37, RULE_comparison = 38, RULE_for = 39, 
		RULE_while = 40, RULE_if = 41, RULE_else = 42, RULE_else_if = 43, RULE_prefix = 44, 
		RULE_postfix = 45, RULE_typeParam = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "namespaceDeclaration", "interfaceDeclaration", "classDeclaration", 
			"classBody", "publicSection", "privateSection", "classMember", "methodDeclaration", 
			"parameterList", "parameter", "nestedClassDeclaration", "type", "implementationDeclaration", 
			"classMethod", "methodBody", "returnMethodBody", "returnStatement", "statementList", 
			"statement", "methodCall", "methodCallReturn", "assignment", "argumentList", 
			"variableDeclaration", "booleanDeclaration", "expression", "shiftExpression", 
			"term", "factor", "print", "printExpression", "printAddExpr", "printAtom", 
			"bool", "boolExpression", "boolTerm", "boolFactor", "comparison", "for", 
			"while", "if", "else", "else_if", "prefix", "postfix", "typeParam"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "':'", "','", "'int'", "'double'", "'String'", "'boolean'", 
			null, "'namespace'", "'interface'", "'class'", "'method'", "'implementation'", 
			"'uses'", "'begin'", "'end;'", "'end.'", "'for'", "'while'", "'break'", 
			"'if'", "'else'", "'else if'", "'return'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'='", null, "'.'", "';'", "'''", "'>'", "'<'", "'=='", "'!='", 
			"'<='", "'=>'", "'++'", "'--'", "'&'", "'|'", "'true'", "'false'", "'<<'", 
			"'>>'", "'Integer'", "'Double'", "'STRING'", "'Boolean'", "'public'", 
			"'private'", null, null, null, "'main'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "INT", "DOUBLE", "STRING", "BOOLEAN", "BLANK", 
			"NAMESPACE", "INTERFACE", "CLASS", "METHOD", "IMPLMT", "USES", "BEGIN", 
			"END_M", "END_P", "FOR", "WHILE", "BREAK", "IF", "ELSE", "ELSE_IF", "RETURN", 
			"PLUS", "MINUS", "MULT", "DIV", "R_DIV", "EQUALLY", "COMMENT", "POINT", 
			"PC", "Q_MARK", "MANY", "LESS", "EQUALLY_BOOL", "NOT_EQUALLY", "L_EQUALLY", 
			"M_EQUALLY", "INCREM", "DECREM", "AND", "OR", "TRUE", "FALSE", "LSHIFT", 
			"RSHIFT", "INT_M", "DOUBLE_M", "STRING_M", "BOOLEAN_M", "PUBLIC", "PRIVATE", 
			"NUMBER_INT", "DOUBLE_NUMBER", "STRING_LITERAL", "MAIN", "PRINT", "ID_UP", 
			"ID_LOW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tokens.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TokensParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public ImplementationDeclarationContext implementationDeclaration() {
			return getRuleContext(ImplementationDeclarationContext.class,0);
		}
		public TerminalNode END_P() { return getToken(TokensParser.END_P, 0); }
		public NamespaceDeclarationContext namespaceDeclaration() {
			return getRuleContext(NamespaceDeclarationContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAMESPACE) {
				{
				setState(94);
				namespaceDeclaration();
				}
			}

			setState(97);
			interfaceDeclaration();
			setState(98);
			implementationDeclaration();
			setState(99);
			match(END_P);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceDeclarationContext extends ParserRuleContext {
		public TerminalNode NAMESPACE() { return getToken(TokensParser.NAMESPACE, 0); }
		public TerminalNode ID_UP() { return getToken(TokensParser.ID_UP, 0); }
		public TerminalNode PC() { return getToken(TokensParser.PC, 0); }
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterNamespaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitNamespaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitNamespaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceDeclarationContext namespaceDeclaration() throws RecognitionException {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespaceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(NAMESPACE);
			setState(102);
			match(ID_UP);
			setState(103);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(TokensParser.INTERFACE, 0); }
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterInterfaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitInterfaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitInterfaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interfaceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INTERFACE);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID_UP) {
				{
				{
				setState(106);
				classDeclaration();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode ID_UP() { return getToken(TokensParser.ID_UP, 0); }
		public TerminalNode EQUALLY() { return getToken(TokensParser.EQUALLY, 0); }
		public TerminalNode CLASS() { return getToken(TokensParser.CLASS, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode END_M() { return getToken(TokensParser.END_M, 0); }
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ID_UP);
			setState(113);
			match(EQUALLY);
			setState(114);
			match(CLASS);
			setState(115);
			classBody();
			setState(116);
			match(END_M);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyContext extends ParserRuleContext {
		public PrivateSectionContext privateSection() {
			return getRuleContext(PrivateSectionContext.class,0);
		}
		public PublicSectionContext publicSection() {
			return getRuleContext(PublicSectionContext.class,0);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRIVATE:
				{
				setState(118);
				privateSection();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC) {
					{
					setState(119);
					publicSection();
					}
				}

				}
				break;
			case PUBLIC:
				{
				setState(122);
				publicSection();
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE) {
					{
					setState(123);
					privateSection();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PublicSectionContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(TokensParser.PUBLIC, 0); }
		public ClassMemberContext classMember() {
			return getRuleContext(ClassMemberContext.class,0);
		}
		public PublicSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_publicSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterPublicSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitPublicSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitPublicSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PublicSectionContext publicSection() throws RecognitionException {
		PublicSectionContext _localctx = new PublicSectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_publicSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(PUBLIC);
			setState(129);
			classMember();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrivateSectionContext extends ParserRuleContext {
		public TerminalNode PRIVATE() { return getToken(TokensParser.PRIVATE, 0); }
		public ClassMemberContext classMember() {
			return getRuleContext(ClassMemberContext.class,0);
		}
		public PrivateSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_privateSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterPrivateSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitPrivateSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitPrivateSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrivateSectionContext privateSection() throws RecognitionException {
		PrivateSectionContext _localctx = new PrivateSectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_privateSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(PRIVATE);
			setState(132);
			classMember();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassMemberContext extends ParserRuleContext {
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public NestedClassDeclarationContext nestedClassDeclaration() {
			return getRuleContext(NestedClassDeclarationContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterClassMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitClassMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitClassMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classMember);
		int _la;
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
			case END_M:
			case PUBLIC:
			case PRIVATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CLASS) {
					{
					{
					setState(134);
					methodDeclaration();
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ID_UP:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				nestedClassDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(TokensParser.CLASS, 0); }
		public TerminalNode METHOD() { return getToken(TokensParser.METHOD, 0); }
		public TerminalNode PC() { return getToken(TokensParser.PC, 0); }
		public TerminalNode ID_LOW() { return getToken(TokensParser.ID_LOW, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(TokensParser.MAIN, 0); }
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_methodDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(CLASS);
			setState(144);
			match(METHOD);
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID_LOW:
				{
				setState(145);
				match(ID_LOW);
				}
				break;
			case T__0:
			case MAIN:
				{
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MAIN) {
					{
					setState(146);
					match(MAIN);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(151);
			match(T__0);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 480L) != 0)) {
				{
				setState(152);
				parameterList();
				}
			}

			setState(155);
			match(T__1);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(156);
				match(T__2);
				setState(157);
				type();
				}
			}

			setState(160);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			parameter();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(163);
				match(T__3);
				setState(164);
				parameter();
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public TypeParamContext typeParam() {
			return getRuleContext(TypeParamContext.class,0);
		}
		public TerminalNode ID_LOW() { return getToken(TokensParser.ID_LOW, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokensListener ) ((TokensListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TokensVisitor ) return ((TokensVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

